2011-12-29  WOnder93  <omosnacek@gmail.com>

	* Bang#.sln:
	* Bang#.userprefs:
	  

2011-12-28  WOnder93  <omosnacek@gmail.com>

	* Bang#.userprefs:
	  

2011-12-28  WOnder93  <omosnacek@gmail.com>

	* Bang#.userprefs:
	  

2011-10-28  WOnder93  <omosnacek@gmail.com>

	* Bang#.userprefs:
	  Migrated to Mono/.NET 4.0
	Updated to comply with the new C# standard.

2011-10-18  WOnder93  <omosnacek@gmail.com>

	* Bang#.userprefs:
	  

2011-09-29  WOnder93  <omosnacek@gmail.com>

	* Bang#.userprefs:
	  

2011-09-28  WOnder93  <omosnacek@gmail.com>

	* Bang#.userprefs:
	  

2011-09-20  WOnder93  <omosnacek@gmail.com>

	* Bang#.userprefs:
	  

2011-09-19  WOnder93  <omosnacek@gmail.com>

	* Bang#.userprefs:
	  

2011-09-15  WOnder93  <omosnacek@gmail.com>

	* Bang#.userprefs:
	  

2011-09-15  WOnder93  <omosnacek@gmail.com>

	* Bang#.userprefs:
	  

2011-09-10  WOnder93  <omosnacek@gmail.com>

	* Bang#.sln:
	* Bang#.userprefs:
	* Bang# Server Daemon:
	* Bang# Server Interface:
	  

2011-08-19  WOnder93  <omosnacek@gmail.com>

	* Bang#.userprefs:
	  

2011-08-18  WOnder93  <omosnacek@gmail.com>

	* Bang#.sln:
	* Bang#.userprefs:
	  

2011-08-16  WOnder93  <omosnacek@gmail.com>

	* Bang#.userprefs: 

2011-08-16  WOnder93  <omosnacek@gmail.com>

	* Bang#.sln:
	* Bang#.userprefs:
	* System.Runtime.Remoting.Channels.TwoWayTcp: 

2011-08-07  WOnder93  <omosnacek@gmail.com>

	* Bang#.sln:
	* Bang#.userprefs: 
