@@ -1,3 +1,8 @@
+2011-12-30  WOnder93  <omosnacek@gmail.com>
+
+	* Bang#.userprefs:
+	  
+
 2011-12-29  WOnder93  <omosnacek@gmail.com>
 
 	* Bang#.sln:
